--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
+      - name: Install Ngrok
+        run: npm install ngrok -g
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
