--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,14 +17,25 @@ jobs:
 
       - name: Install Ngrok
         run: docker pull ngrok/ngrok
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
+        
       - name: Build Home Assistant Docker Image
-        run: |
-          docker buildx build --platform linux/arm64,linux/amd64 --tag homeassistant .
+        run: apt install \
+apparmor \
+bluez \
+cifs-utils \
+curl \
+dbus \
+jq \
+libglib2.0-bin \
+lsb-release \
+network-manager \
+nfs-common \
+systemd-journal-remote \
+systemd-resolved \
+udisks2 \
+wget -y
 
+        
       - name: Run Home Assistant Container
         run: docker run -it -p 8123:8123 homeassistant
 
